<resources>
    <string name="app_name">MovieDB</string>

    <!--    Movies Activity -->
    <string name="movies_title">Movies</string>

    <!--    Movie Details Activity  -->
    <string name="movie_details_title_label">Titulo</string>
    <string name="movie_details_overview_label">Sinopse</string>
    <string name="no_favorite_message">Ainda não tem nenhum filme favoritado</string>



    <string name="movie_details_score_label">Nota</string>

    <string name="movie_details_genre_label">Gêneros</string>
    <string name="item_movie_description">Poster do filme</string>
    <string name="item_movie_favorite">Imagem Favorito</string>
    <string name="movie_no_favorite">Imagem não tem favoritos</string>
    <string name="MovieTitle">Filmes</string>
    <string name="FavoriteTitle">Favoritos</string>
    <string name="movie_details_poster">Imagem do poster</string>
    <string name="movie_details_favorite_image">Imagem favorito</string>

</resources>
