<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".presentation.details.MovieDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/posterDetails"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:contentDescription="@string/movie_details_poster"
            app:srcCompat="@drawable/not_found" />

        <ImageView
            android:id="@+id/favoriteImageView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:contentDescription="@string/movie_details_favorite_image"
            android:src="@drawable/unfavorite"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            android:text="@string/movie_details_title_label"
            android:textColor="@color/black"
            android:textSize="@dimen/t5"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movieDetailsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/details_text_margin"
            android:textColor="@color/black"
            tools:text="" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_details_overview_label"
            android:textColor="@color/black"
            android:textSize="@dimen/t5"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movieDetailsOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/details_text_margin"
            android:textColor="@color/black"
            tools:text="" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_details_score_label"
            android:textColor="@color/black"
            android:textSize="@dimen/t5"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movieDetailsScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/details_text_margin"
            android:textColor="@color/black"
            tools:text="" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_details_genre_label"
            android:textColor="@color/black"
            android:textSize="@dimen/t5"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movieDetailsGenres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/details_text_margin"
            android:textColor="@color/black"
            tools:text="" />

    </LinearLayout>
</ScrollView>